<resources>
    <string name="app_name">Newsflash</string>
    <string name="no_title">Untitled Story</string>
    <string name="no_section">Unsorted</string>
    <string name="no_date">Unknown Time</string>
    <string name="no_internet">No internet connection.</string>
    <string name="no_news">No stories found.</string>
    <string name="refresh">Refresh</string>
    <string name="title">Story Title</string>
    <string name="section">Section</string>
    <string name="date">1970-01-01</string>
    <string name="time">12:00</string>
    <string name="in">in</string>
    <string name="about">Newsflash is a simple app that fetches top stories from The Guardian\'s API and displays them in a list.</string>
</resources>
