<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="16dp"
    tools:context="in.thepolymath.newsflash.MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:paddingBottom="4dp"
            android:text="@string/title"
            android:textColor="#212121"
            android:textSize="28sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:paddingBottom="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="4dp"
                android:paddingRight="4dp"
                android:text="@string/in"
                android:textColor="#757575"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/section"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/section"
                android:textColor="#757575"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="#757575"
            android:fontFamily="sans-serif-condensed"/>

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textColor="#757575"
            android:fontFamily="sans-serif-condensed"/>

    </LinearLayout>

</LinearLayout>
